chore: add blurb text

--- a/templates/about.html
+++ b/templates/about.html
@@ -146,13 +146,9 @@
                         src="/static/images/vernell.jpg" alt="Vernell image">
                     <div class="card-body text-center">
                         <h5 class="card-title fw-bold members">Vernell</h5>
-                        <p class="card-text text-justify-custom">Lorem ipsum dolor sit amet, consectetur 
-                            adipiscing elit. Fusce laoreet mi sed risus tincidunt sagittis. Aenean a risus 
-                            ex. Integer non ultrices felis. Cras vel massa in ipsum mattis efficitur. 
-                            Curabitur vitae rhoncus magna. Suspendisse ullamcorper gravida elementum. 
-                            Vestibulum ut pellentesque sem. Aenean bibendum maximus velit. Proin eu augue 
-                            vel ex aliquam fermentum a eu turpis. Maecenas laoreet, sem id posuere condimentum, 
-                            risus velit rutrum mauris, quis.</p>
+                        <p class="card-text text-start">A lifelong learner, drawing from a varied skill set in systems integration, low-voltage electrical interfaces, telecommunications, audio, and data systems, stepping into the world of development to help businesses reach their target customers and communicate with them more effectively.
+
+Interested in connecting with anyone that coaches, mentors, supports, or helps to inspire engineers, at any level.</p>
                     </div>
                     <div class="card-footer text-center">
                         <a href="https://www.linkedin.com/in/vernellclark/" target="_blank"
