--- a/venues/templates/venue_list.html
+++ b/venues/templates/venue_list.html
@@ -2,4 +2,33 @@
 
 {% block content %}
 
+<div class="container mt-3 min-vh-100">
+  <div class="about-us">
+    <div
+      class="container py-5 d-flex justify-content-center align-items-center"
+    >
+      <div>
+        <h1 class="fw-bold text-white">VENUES</h1>
+      </div>
+    </div>
+  </div>
+
+<div class="container mt-3 p-2">
+<div class="row gx-4 gx-lg-5">
+    {% for venue in venue_list %}
+        <div class="col-md-4 mb-5">
+            <div class="card h-100">
+                <img src="{{ venue.image.url }}" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h2 class="card-title">{{ venue.name }}</h2>
+                    <p class="card-text"><i class="fa-solid fa-location-dot"></i> {{ venue.address }}</p>
+                    <p class="card-text"><i class="fa-solid fa-address-book"></i> {{ venue.contact_info }} </p>
+                    <p class="card-text"><i class="fa-regular fa-clock"></i> {{ venue.opening_hours | safe }}</p>
+                    <p class="card-text"><i class="fa-solid fa-star"></i> Special features: {{ venue.special_features }}</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{% endfor %} 
 {% endblock %}
