--- a/venues/templates/venue_list.html
+++ b/venues/templates/venue_list.html
@@ -18,7 +18,12 @@
     {% for venue in venue_list %}
         <div class="col-md-4 mb-5">
             <div class="card h-100">
-                <img src="{{ venue.image.url }}" class="card-img-top" alt="...">
+                {% if 'placeholder' in venue.image.url %}
+                <img src="https://res.cloudinary.com/dxs42sums/image/upload/v1721583416/evelyn-paris-QR_vT8_hBZM-unsplash_wkiekd.jpg"
+                class="card-img-top" alt="Venue">
+                {% else %}
+                <img src="{{ venue.image.url }}" class="card-img-top" alt="Venue">
+                {% endif %}
                 <div class="card-body">
                     <h2 class="card-title">{{ venue.name }}</h2>
                     <p class="card-text"><i class="fa-solid fa-location-dot"></i> {{ venue.address }}</p>
