chore: change image refs

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -7,8 +7,7 @@
     <!-- Heading Row -->
     <div class="row gx-4 gx-lg-5 align-items-center my-5">
         <div class="col-lg-7">
-            <img class="img-fluid rounded mb-4 mb-lg-0"
-                src="{% static '/images/rainbow-heart.jpg' %}"
+            <img class="img-fluid rounded mb-4 mb-lg-0"src="{% static 'images\rainbow-heart.jpg' %}"
                 alt="Hand holding a rainbow coloured wooden heart against a blue sky.">
         </div>
         <div class="col-lg-5">
