--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,8 @@
     <link rel="icon" type="image/x-icon" href="{% static 'favicon/favicon.ico' %}">
         {% block extra_css %}
         {% endblock %}
+        {% block extra_head %}
+        {% endblock %}
 
   </head>
   <body>
