Add aria label to logo

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -3,7 +3,7 @@
 <header>
 <nav class="navbar fixed-top navbar-expand-lg custom-navbar">
     <div class="container-fluid px-5">
-        <a class="navbar-brand" href="{% url 'home' %}">
+        <a class="navbar-brand" href="{% url 'home' %}" aria-label="link to Home Page">
             <img class="me-3" src="{% static 'images/white-logo.png' %}" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">Inclusive Spots
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
