--- a/templates/about.html
+++ b/templates/about.html
@@ -136,7 +136,7 @@
                     <div class="card-footer text-center">
                         <a href="https://www.linkedin.com/in/laurakondrataite/" target="_blank"
                         aria-label="Laura's LinkedIn"><i class="fab fa-linkedin fa-2x" style="color: #355FAA"></i></a>
-                        <a href="https://github.com/Edgarkimbugwe" target="_blank" aria-label="Edgar's GitHub"><i
+                        <a href="https://github.com/laurakond" target="_blank" aria-label="Laura's GitHub"><i
                         class="fab fa-github fa-2x" style="color: #355FAA"></i></a>
                     </div>
                 </div>
