Add aria labels

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -5,7 +5,7 @@
   <div class="container custom-footer-pt-4">
     <!-- Copyright -->
     <div class="text-center mt-0">
-      <a class="custom-footer-text" href="{% url 'home' %}" aria-label="link to home page">Inclusive Spots</a>
+      <a class="custom-footer-text" href="{% url 'home' %}" aria-label="link to Home Page">Inclusive Spots</a>
       <p class="mb-0">Project created for Code Institute's July 2024 Hackathon</p>
       <p class="mb-0">For educational purposes only</p>
     </div>
