--- a/templates/500.html
+++ b/templates/500.html
@@ -28,7 +28,7 @@
 					</div>
 				</div><!-- /lc-block -->
 				<div class="lc-block">
-					<a class="btn btn-lg btn-primary rounded-pill" href="{% url 'home' %}" role="button">Back to homepage</a>
+					<a class="btn btn-lg btn-primary rounded-pill" href="{% url 'home' %}" role="button" aria-label="link to Home Page">Back to homepage</a>
 				</div><!-- /lc-block -->
 			</div><!-- /col -->
 		</div>
