Edit button content

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -16,7 +16,7 @@
                 up-to-date information on safe spaces where every individual can feel accepted, respected, and
                 celebrated. We envision a world where LGBTQIA+ individuals can freely explore and engage with their
                 communities without fear, knowing there is access to safe, inclusive, and supportive environments.</p>
-            <a class="btn btn-primary" href="#!">Explore venues</a>
+            <a class="btn btn-primary" href="#!" aria-labels="Link to Venues page">Explore venues</a>
         </div>
     </div>
 
@@ -38,7 +38,7 @@
                         space to express yourself, there is something for everyone to enjoy.</p>
                 </div>
                 <div class="card-footer custom-footer">
-                    <a class="btn btn-primary btn-sm" href="#!">More Info</a>
+                    <a class="btn btn-primary btn-sm" href="#!" aria-labels="Link to Venues page">Explore more</a>
                 </div>
             </div>
         </div>
@@ -52,7 +52,7 @@
                         are community hubs where diversity is celebrated and everyone is welcome.</p>
                 </div>
                 <div class="card-footer custom-footer">
-                    <a class="btn btn-primary btn-sm" href="#!">More Info</a>
+                    <a class="btn btn-primary btn-sm" href="#!" aria-labels="Link to Venues page">Explore more</a>
                 </div>
             </div>
         </div>
@@ -66,7 +66,7 @@
                         compassionate and professional support tailored to the unique needs of the community.</p>
                 </div>
                 <div class="card-footer custom-footer">
-                    <a class="btn btn-primary btn-sm" href="#!">More Info</a>
+                    <a class="btn btn-primary btn-sm" href="#!" aria-labels="Link to Venues page">Explore more</a>
                 </div>
             </div>
         </div>
