Edit alt text in index html

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -8,7 +8,7 @@
     <div class="row gx-4 gx-lg-5 align-items-center my-5">
         <div class="col-lg-7">
             <img class="img-fluid rounded mb-4 mb-lg-0"src="{% static 'images\rainbow-heart.jpg' %}"
-                alt="Hand holding a rainbow coloured wooden heart against a blue sky.">
+                alt="Hand holding a heart.">
         </div>
         <div class="col-lg-5">
             <h1 class="font-weight-light">Inclusive Spots</h1>
