Edit about page section

--- a/templates/about.html
+++ b/templates/about.html
@@ -125,13 +125,7 @@
                         src="{% static 'images\laura.png' %}" alt="Laura image">
                     <div class="card-body text-center">
                         <h5 class="card-title fw-bold members">Laura</h5>
-                        <p class="card-text text-justify-custom">Lorem ipsum dolor sit amet, consectetur 
-                            adipiscing elit. Fusce laoreet mi sed risus tincidunt sagittis. Aenean a risus 
-                            ex. Integer non ultrices felis. Cras vel massa in ipsum mattis efficitur. 
-                            Curabitur vitae rhoncus magna. Suspendisse ullamcorper gravida elementum. 
-                            Vestibulum ut pellentesque sem. Aenean bibendum maximus velit. Proin eu augue 
-                            vel ex aliquam fermentum a eu turpis. Maecenas laoreet, sem id posuere condimentum, 
-                            risus velit rutrum mauris, quis.</p>
+                        <p class="card-text text-justify-custom">I am currently studying Full Stack Development with Code Institute with a goal of a career change. I have a background in art history, having worked in the art and heritage sector for over a decade. I enjoy coding as it allows me to solve puzzles, (just like a Sudoku) and apply my creative thinking when I have to create website designs.</p>
                     </div>
                     <div class="card-footer text-center">
                         <a href="https://www.linkedin.com/in/laurakondrataite/" target="_blank"
