--- a/static/css/style.css
+++ b/static/css/style.css
@@ -238,6 +238,13 @@ footer.text-center {
   color: var(--light-text);
 }
 
+/*----- MAP -----*/
+#map {
+  height: 20vh;
+  width: 100%;
+  background-color: #eee;
+}
+
 /* Media queries */
 @media (min-width: 1200px) {
 
