Add timeout & button to redirect to the home page

--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -52,7 +52,7 @@
 </div>
 
 <!-- EmailJS -->
-<script type="text/javascript">
+{% comment %} <script type="text/javascript">
   window.onload = function () {
     document
       .getElementById("contact-us")
@@ -69,6 +69,6 @@
         );
       });
   };
-</script>
+</script> {% endcomment %}
 
 {% endblock %}
