Add commented out code back in

--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -52,7 +52,7 @@
 </div>
 
 <!-- EmailJS -->
-{% comment %} <script type="text/javascript">
+<script type="text/javascript">
   window.onload = function () {
     document
       .getElementById("contact-us")
@@ -69,6 +69,6 @@
         );
       });
   };
-</script> {% endcomment %}
+</script> 
 
 {% endblock %}
